# Game

./: .gitignore  CMakeLists.txt  README.md  generate.ps1
.cmake/: config.cmake
.external/glad/include/glad/: glad.h
Resources/Waves/: WaveFrag.glsl  WaveGeomLines.glsl  WaveGeomPoints.glsl  WaveGeomTriangles.glsl  WaveTControl.glsl  WaveTEval.glsl  WaveVert.glsl
Shaders/Base/: base.fs  base.gs  base.vs  simple.fs  simple.vs
Shaders/Text/: text.fs  text.vs
Source/: main.cpp
Source/Engine/Events/: Common.hpp  CustomEvents.cpp  CustomEvents.hpp  Events.cpp  Events.hpp
Source/Engine/Graphic/: BaseScene.cpp  BaseScene.hpp  BaseShape.hpp  Buffer.cpp  Camera.cpp  Camera.hpp  ComputeShader.cpp  ComputeShader.h  Icosahedron.h  Points.cpp  Points.h  Shader.cpp  Shader.hpp  Shape.h  StorageBuffer.cpp  StorageBuffer.h  TextEngine.cpp  TextEngine.hpp  Window.cpp  Window.hpp
Source/Engine/Graphic/Base/: BaseCommander.cpp  BaseCommander.hpp  BaseScene.cpp  BaseScene.hpp  BaseShape.cpp  BaseShape.hpp  Cookable.cpp  Cookable.hpp  Light.cpp  Light.hpp
Source/Engine/Graphic/Drawables/: BaseDrawable.cpp  BaseDrawable.hpp  BaseShape.cpp  BaseShape.hpp  Ellipse.hpp  Quad.hpp  Rectangle.cpp  Rectangle.hpp
Source/Engine/Graphic/Shaders/: ComputeShader.cpp  Shader.cpp  Shader.hpp  ShaderSource.cpp  ShaderSource.hpp
Source/Engine/Graphic/Shapes/: BaseShape.cpp  BaseShape.hpp  Circle.cpp  Circle.h  Ellipse.cpp  Ellipse.hpp  Icosahedron.cpp  Quad.cpp  Quad.h  Rectangle.cpp  Rectangle.hpp  Shape.cpp  Shape.h  Square.cpp  Square.h
Source/Engine/Graphic/Utils/: Array.cpp  Array.h  Array.hpp  Buffer.cpp  Buffer.h  Buffer.hpp  (+2 more)
Source/Engine/Physx/: BaseBody.cpp  BaseBody.hpp  Physx.cpp  Physx.hpp
Source/Engine/Sound/: Player.cpp  Player.hpp
Source/Game/: Game.cpp  Game.hpp  GameManager.cpp  GameManager.hpp
Source/Game/Commander/: BaseCommander.cpp  BaseCommander.hpp  FruitCommander.cpp  FruitCommander.hpp  SlimeCommander.cpp  SlimeCommander.hpp  TestCommander.cpp  TestCommander.hpp
Source/Game/Commanders/: CrashCommander.cpp  CrashCommander.hpp  EndingCommander.cpp  EndingCommander.hpp  IntroCommander.cpp  IntroCommander.hpp  SlimeCommander.cpp  SlimeCommander.hpp  TestCommander.cpp  TestCommander.hpp
Source/Game/Scene/: CrashScene.cpp  CrashScene.hpp  ExperimentalScene.cpp  ExperimentalScene.hpp  FlapiScene.cpp  FlapiScene.hpp  FruitScene.cpp  FruitScene.hpp  SimpleScene.cpp  SimpleScene.hpp  SlimeScene.cpp  SlimeScene.hpp  TesselScene.cpp  TesselScene.hpp  TestScene.cpp  TestScene.hpp
Source/Game/Scenes/: CrashScene.cpp  CrashScene.hpp  EndingScene.cpp  EndingScene.hpp  IntroScene.cpp  IntroScene.hpp  SlimeScene.cpp  SlimeScene.hpp  TestScene.cpp  TestScene.hpp
Source/Utils/: Animator.cpp  Animator.hpp  Caster.hpp  Timeline.hpp  Timer.hpp
(+48 files in other folders)
